# Meshbot

./: .dockerignore  .gitignore  .gitlab-ci.yml  .npmrc  .pnpmfile.cjs  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  biome.json  jest.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: config.json  phase-4-track-d-bootstrap.md
.claude/: CLAUDE.md
.cursor/: settings.json
.husky/: pre-commit  pre-push
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
docs/: PHASE_HISTORY.md  architecture.md
scripts/: README.md  archive-migrations.ts  check-dead-exports.ts  check-dev-script.spec.ts  check-dev-script.ts  check-error-code.ts  check-lock-tx.ts  check-method-naming.ts  check-pk.spec.ts  check-pk.ts  rebuild-native.ts  (+11 more)
tools/browser-agent/: .gitignore  README.md  pyproject.toml
tools/browser-agent/browser_agent/: __init__.py  guardrails.py  humanize.py  manager.py  primitives.py  server.py  snapshot.py
tools/browser-agent/tests/: conftest.py  test_guardrails.py  test_humanize.py  test_manager.py  test_primitives.py  test_server.py  test_snapshot.py  test_stealth.py
tools/browser-agent/tests/fixtures/: form.html
tools/browser-mcp/: .gitignore  README.md  pyproject.toml
tools/browser-mcp/browser_mcp/: __init__.py  humanize.py  manager.py  patches.py  primitives.py  profile.py  server.py  snapshot.py
tools/browser-mcp/tests/: conftest.py  test_humanize.py  test_manager.py  test_primitives.py  test_profile.py  test_server.py  test_snapshot.py  test_stealth.py
tools/browser-mcp/tests/fixtures/: form.html
(+1638 files in other folders)
